feat: added style.css & script.js files. And structured the html.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Unit Converter</title>
+    <script src="script.js"></script>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <h1>Universal Unit Converter</h1>
+    </header>
+    <main>
+        <!--Home View-->
+        <section id="home-view">
+            <div class="categories-grid">
+                <!-- Cards will go here -->
+            </div>
+             
+        </section>
+
+        <!-- Module View (hidden by default) -->
+        <section id="module-view" style="display: none;">
+            <!-- Will be filled dynamically -->
+        </section>
+    </main>
     <footer>
-        <p></p>
+        <p>Universal Unit Converter by Naoman Saeed</p>
     </footer>
 </body>
 </html>
