feat: added back button.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Unit Converter</title>
-    <script src="script.js"></script>
+    
 </head>
 <body>
     <header>
@@ -15,6 +15,15 @@
         <!--Home View-->
         <section id="home-view">
             <div class="categories-grid">
+                <div class="category-card" data-category="length">
+                    <h2>Length</h2>
+                </div>
+                <div class="category-card" data-category="mass">
+                    <h2>Mass</h2>
+                </div>
+                <div class="category-card" data-category="volume">
+                    <h2>Volume</h2>
+                </div>
                 <!-- Cards will go here -->
             </div>
              
@@ -28,5 +37,6 @@
     <footer>
         <p>Universal Unit Converter by Naoman Saeed</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
